<resources>
    <string name="app_name">Random Game</string>
    <string name="input_request">Я думаю о числе от 1 до 10. Сможете ли вы угадать его?</string>
    <string name="input_numbers">Введите число</string>
    <string name="input">Ввод</string>
    <string name="hint">Подсказка</string>
    <string name="hint1">Загаданное число меньше %1\$d .</string>
    <string name="hint2">Загаданное число больше %1\$d.</string>
    <string name="error3">Ошибка! Недопустимый ввод.</string>
    <string name="offset">Поздравляю! Верный ответ.</string>
    <string name="gues_number">Угадайте число от 1 до 10</string>
    <string name="request">Верный ответ.Сыграем ещё?</string>
    <string name="thanks">Спасибо за игру</string>
    <string name="title">Угадай число</string>
    <string name="quantity">Попыток</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="attempts_format"> %1\$d</string>
</resources>